@@ -1,4 +1,4 @@
-/* $Id: views-list.css,v 1.12.6.1 2009-11-02 22:01:25 merlinofchaos Exp $ */
+/* $Id: views-list.css,v 1.12.6.2 2009-11-18 20:04:07 merlinofchaos Exp $ */
 
 table.views-entry {
   margin: 3px 0;
@@ -73,10 +73,6 @@ table.view-disabled td.view-name,
 table.view-disabled td.view-ops {
   line-height: 1.6;
   padding-bottom: 0.3em;
-}
-table.views-entry td.view-name,
-table.views-entry td.view-ops {
-  background: #eee;
 }
 table.view-enabled td.view-name,
 table.view-enabled td.view-ops {
